Two pages generated

--- a/practice/templates/practice/header.html
+++ b/practice/templates/practice/header.html
@@ -4,7 +4,8 @@
     <!--Stylesheet goes here-->
   </head>
   <body>
-  <div id="navbar" style="background-color: #ff7043 ">
+  <div id="navbar" style="background-color: #ff7043; height: 20px; ">
+  </div>
   {% block content %}
 
   {% endblock %}
