--- a/forum/templates/forum/answer_form.html
+++ b/forum/templates/forum/answer_form.html
@@ -1,10 +1,19 @@
 {% extends 'forum/base.html' %}
-{% block body %}
+{% block title %}Answers{% endblock %}
+{% block head %}
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'forum/answer_form.css' %}">
+{% endblock %}
 
-<form action="" method="post">
-{% csrf_token %}
-<h3>{{ question.question }}</h3>
-{% include 'forum/form_template.html' %}
-<input type="submit" name="submit" value="answer">
+{% block body %}
+  <h2 class="col-md-12 head">{{ question.question }}</h2><br><br>
+  <form action="" method="post" class="qform" role="form">
+  {% csrf_token %}
+  {% include 'forum/form_template.html' %}
+  <br><br>
+  <input class="submit" type="submit" name="submit" value="Submit">
+  </form>
 
 {% endblock %}
+
+
