--- a/forum/templates/forum/base.html
+++ b/forum/templates/forum/base.html
@@ -11,6 +11,7 @@
     {% endblock %}
 
 <body>
+<div class="main">
   <div class="container-fluid" style="padding: 0px">
     <nav class="navbar-static-top navbar-default">
         <div class="navbar-header navbar-custom">
@@ -42,13 +43,16 @@
 
   {% block body %}
   {% endblock %}
+  
+</div>
 
-  <footer>
+  <footer >
     <div class="panel-footer footer">
       <h5>CoderSite</h5>
       <h5 align="right">Developed By: <br><br>Shilpi<br>Vagisha Nidhi<br>Yash Verma</h5>
     </div>
   </footer>
+
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
