--- a/forum/templates/forum/form_template.html
+++ b/forum/templates/forum/form_template.html
@@ -2,8 +2,8 @@
 
   <span>{{ field.errors }}</span>
   <div>
-    <label >{{ field.label_tag }}</label>
-    <div >{{ field }}</div>
+    <label class="form-label">{{ field.label_tag }}</label>
+    <div class="form-input">{{ field }}</div>
   </div>
 
 {% endfor %}
