--- a/forum/templates/forum/dup_error.html
+++ b/forum/templates/forum/dup_error.html
@@ -1,4 +1,4 @@
-{% extends 'forum/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Detail{% endblock %}
 {% block head %}
   {% load static %}
