--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <title>{% block title %} {% endblock %}</title>
   {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'forum/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     {% block head %}
