User app deleted and working

--- a/articles/templates/articles/article_form.html
+++ b/articles/templates/articles/article_form.html
@@ -8,16 +8,24 @@
 {% block body %}
 <form action = "" method="post" >
     {% csrf_token %}
+    <div class="row" style="margin-top:50px;">
+        <div class="col-md-1"></div>
+        <div class="form-group col-md-10">
+            <label for = "title">Title</label>
+            <input type="text" name="title" id = "title" class="form-control" placeholder="Enter Title Of The Article" >
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+    <div class="row">  
+        <div class="col-md-1"></div>  
+        <div class="form-group col-md-10">
+            <label for = "content">Enter Article Content</label>
+            <textarea class="form-control" id="content" rows="3" name="content"></textarea>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+    <button type="submit" class="btn btn-primary" style="margin-left:125px;">Submit</button>
     
-    <div class="form-group">
-        <label for = "title">Title</label>
-        <input type="text" name="title" id = "title" class="form-control" placeholder="Enter Title of the article" >
-    </div>
-    <div class="form-group">
-        <label for = "content">Enter Aricle Content</label>
-        <textarea class="form-control" id="content" rows="3" name="content"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
     
 </form>
 
