Templates for login, registration, user profile added

--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -1,4 +1,4 @@
-{% extends 'articles/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Article{% endblock %}
 {% block head %}
   {% load static %}
