--- a/articles/templates/articles/article_form.html
+++ b/articles/templates/articles/article_form.html
@@ -1,4 +1,4 @@
-{% extends 'articles/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Article{% endblock %}
 {% block head %}
   {% load static %}
@@ -20,7 +20,7 @@
         <div class="col-md-1"></div>  
         <div class="form-group col-md-10">
             <label for = "content">Enter Article Content</label>
-            <textarea class="form-control" id="content" rows="3" name="content"></textarea>
+            <textarea class="form-control" id="content" rows="15" name="content"></textarea>
         </div>
         <div class="col-md-1"></div>
     </div>
