--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,4 +1,4 @@
-{% extends 'articles/base.html' %}
+{% extends 'base.html' %}
 {% block title %}Articles{% endblock %}
 {% block head %}
   {% load static %}
