--- a/logapp/templates/logapp/login.html
+++ b/logapp/templates/logapp/login.html
@@ -1,20 +1,23 @@
-{% extends 'logapp/base.html' %}
+{% extends 'base.html' %}
+{% block title%}Login{% endblock %}
+{% block head %}
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'logapp/login.css' %}">
+{% endblock %}
 
 
-{% block content %}
+{% block body %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+        <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
-
-
-
-<div class="container">
-    <div class="row">
+ 
+  <div class="container" style="margin-top:30px;position:relative">
+    <div class="row" >
         <div class="col-md-4 col-md-offset-4">
-            <div class="login-panel panel panel-default">
+            <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Please Sign In</h3>
+                  <strong>Login</strong>
                 </div>
                 <div class="panel-body">
                     <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
@@ -31,15 +34,22 @@
 
                         <p class="bs-component">
                             <center>
-                                <input class="btn btn-success btn-sm" type="submit" value="login" />
+                                <input class="btn btn-success btn-sm" type="submit" value="Sign In" />
                             </center>
                         </p>
                         <input type="hidden" name="next" value="{{ next }}" />
                     </form>
+                   
+                </div>
+                <div class="panel-footer">
+                    Not Registered? <a href="{% url 'register' %}">Register here</a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+
+
 
 {% endblock %}
