--- a/static/base.css
+++ b/static/base.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat|Varela+Round');
+
 .body{
   padding: 0;
-  margin: 0;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0px;
   overflow: hidden;
   height: 100%;
 }
@@ -62,7 +66,14 @@
   height: 150px;
   overflow: hidden;
   font-family: 'Montserrat', sans-serif;
-  margin: 0;
 
+}
+
+.custom-user-2 {
+  display: none;
+}
+
+.custom-user {
+  display: none;
 }
 
