--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -13,7 +13,7 @@
     <div class="col-md-8">
       <p class="head">{{article.user.username}}&nbsp;|&nbsp; {{article.date_added}}</p>
       <h1>{{article.title}}</h1>
-      <h4 class="category"> Category </h4>
+      <h4 class="category"> {{article.category.name}} </h4>
       <hr>
       <div class= "mainContent" >{{article.content}}</div>
     </div>
