--- a/templates/base.html
+++ b/templates/base.html
@@ -30,12 +30,12 @@
                 <ul class="nav navbar-nav">
                     <li class="navbar-custom"><a href="{% url 'logapp:home' %}">Dashboard</a></li>
                     <li class="navbar-custom"><a href="">Practice</a></li>
-                    <li class="navbar-custom"><a href="#">Forum</a></li>
+                    <li class="navbar-custom"><a href="{% url 'forum:index' %}">Forum</a></li>
                     <li class="navbar-custom"><a href="{% url 'articles:index' %}">Articles</a></li>
                 </ul>
             {% if user.is_authenticated %}
                 <ul class="nav navbar-nav navbar-right " style="padding-right:20px;">
-                    <li class="navbar-custom"><a href="logout/" class="color-white"><span class="glyphicon glyphicon-log-in color-white"></span> Logout </a></li>
+                    <li class="navbar-custom"><a href="{% url 'logout' %}" class="color-white"><span class="glyphicon glyphicon-log-in color-white"></span> Logout </a></li>
                     <li class="navbar-custom custom-user-2"><a href="#" class="color-white "><span class="glyphicon glyphicon-user color-white"></span> {{user.username}} </a></li>
                 </ul>
             {% else %}
@@ -56,13 +56,7 @@
 </div>
 
 
-  <footer>
-    <div class="panel-footer footer" style="margin-top:100px">
-
-      <h5>CoderSite</h5>
-      <h5 align="right">Developed By: <br><br>Shilpi<br>Vagisha Nidhi<br>Yash Verma</h5>
-    </div>
-  </footer>
+ 
 
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
