--- a/logapp/templates/logapp/login.html
+++ b/logapp/templates/logapp/login.html
@@ -1,55 +1,87 @@
-{% extends 'base.html' %}
-{% block title%}Login{% endblock %}
-{% block head %}
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'logapp/login.css' %}">
-{% endblock %}
+{% extends 'base2.html' %}
 
+{% block title %}Codersite{% endblock %}
+{%load static %}
+{% block content %}
+<!--Row 1: Image + login panel -->
+<div class="row">
+    <div class="col-md-8" id="big-logo-bg">
+        <br>
+        <img src="{% static 'images/logo.svg' %}" width="40%">
+    </div>
 
-{% block body %}
+    <div class="container col-md-4" id="we">
+        <br><br>
+        <!-- Login panel -->
+        <div class="panel panel-success">
 
-{% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
- 
-  <div class="container" style="margin-top:30px;position:relative">
-    <div class="row" >
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                  <strong>Login</strong>
-                </div>
-                <div class="panel-body">
-                    <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
-                        {% csrf_token %}
-
-                        <div class="form-group">
-                            <label for = "username">Username</label>
-                             <input type ="text" name="username" id = "password" class="form-control">
-                        </div>
-                        <div class="form-group">
-                        <label for = "password">Password</label>
-                        <input type="password" name="password" class="form-control"> 
-                        </div>
-
-                        <p class="bs-component">
-                            <center>
-                                <input class="btn btn-success btn-sm" type="submit" value="Sign In" />
-                            </center>
-                        </p>
-                        <input type="hidden" name="next" value="{{ next }}" />
-                    </form>
-                   
-                </div>
-                <div class="panel-footer">
-                    Not Registered? <a href="{% url 'register' %}">Register here</a>
-                </div>
+            <div class="panel-heading">
+                <strong>Log in</strong>
             </div>
+            <div class="panel-body">
+                <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+                {% csrf_token %}
+                    <div class="form-group">
+                        <label for="email_input">User Name</label>
+                        <input type="text" class="form-control" name="username" id="email_input" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <label for="pwd_input">Password</label>
+                        <input type="password" class="form-control" name="password" id="pwd_input" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-default">Sign in</button>
+                    <input type="hidden" name="next" value="{{ next }}" />
+                    <br><br>
+                </form>
+            </div>
+            <br>
+        </div>
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            ID or password is incorrect!
+        </div>
+        {% endif %}
+    </div>
+</div>
+<br><br>
+<!-- Row for 3 sections -->
+<div class="row">
+
+    <div class="container col-md-4 ">
+        <div class="panel panel-default sections">
+            <img src="{% static 'images/practice_lamp.svg'%}" width="30%">
+            <h3>Practice</h3>
+            <p>Try out exciting problems and be a pro.</p>
+        </div>
+    </div>
+
+    <div class="container col-md-4 ">
+        <div class="panel panel-default sections">
+            <img src="{% static 'images/learn_bookshelf.svg'%}" width="30%">
+            <h3>Learn</h3>
+            <p>Access articles written by experienced professionals.</p>
+        </div>
+    </div>
+
+    <div class="container col-md-4 ">
+        <div class="panel panel-default sections">
+            <img src="{% static 'images/ask_chat.svg'%}" width="30%">
+            <h3>Ask &amp; Answer</h3>
+            <p>Visit the community forums and share knowledge.</p>
         </div>
     </div>
 </div>
-
-
-
+<div class="row">
+    <div class="panel panel-default" id="footer-div">
+        <address>
+            <h2><span class="glyphicon glyphicon-leaf" style="color: #14c07b;"></span> Codersite</h2>
+            <small>
+                Web Technologies Project<br>
+                Delhi Technological University<br>
+                Copyright (c) DTU
+            </small>
+        </address>
+    </div>
+</div>
 
 {% endblock %}
