--- a/static/css/mine.css
+++ b/static/css/mine.css
@@ -15,11 +15,16 @@ body{
 
 #big-logo-bg,#we{
   background-color: #829192;
-  /*background-color: #1a237e;*/
 }
 img{
   display: block;
   margin:auto;
+}
+#username{
+  /*float:right;*/
+  text-align: center;
+  color: white;
+
 }
 .row{
   margin-left: 0;
@@ -36,4 +41,20 @@ img{
   padding-top: 5px;
   background-color: #ECEFF1;
   margin-bottom: 0;
+}
+.progress-bar-vertical {
+  width: 30px;
+  min-height: 250px;
+  display: flex;
+  align-items: flex-end;
+  margin-right: 20px;
+  float: left;
+}
+
+.progress-bar-vertical .progress-bar {
+  width: 100%;
+  height: 0;
+  -webkit-transition: height 0.6s ease;
+  -o-transition: height 0.6s ease;
+  transition: height 0.6s ease;
 }
