--- a/articles/templates/articles/form-template.html
+++ b/articles/templates/articles/form-template.html
@@ -3,7 +3,7 @@
   <span>{{ field.errors }}</span>
   <div>
     <label class="form-label">{{ field.label_tag }}</label>
-    <div class="form-control">{{ field }}</div>
+    <div>{{ field }}</div>
   </div>
 
 {% endfor %}
