--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -10,7 +10,7 @@
 <div class="container">
     <br>
     <div class="container-fluid" style="padding-bottom:10px;">
-        <h3>Articles</h3><a href="{% url 'forum:questionAdd'  %}">
+        <h3>Forum</h3><a href="{% url 'forum:questionAdd'  %}">
         <button class="btn btn-info" style="float:right;">
             <span class="gylphicon glyphicon-plus"></span> Ask Question
         </button>
