--- a/forum/templates/forum/question_form.html
+++ b/forum/templates/forum/question_form.html
@@ -1,20 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'base2.html' %}
 {% block title %}Question{% endblock %}
 {% block head %}
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'forum/question_form.css' %}">
+{% load static %}
+<!--<link rel="stylesheet" type="text/css" href="{% static 'forum/question_form.css' %}">-->
 {% endblock %}
 
-{% block body %}
-  
-  <h2 class="col-md-12 head">Ask Question</h2><br><br>
-  <form action="" method="post" class="qform" role="form">
-  {% csrf_token %}
-  {% include 'forum/form_template.html' %}
-  <br><br>
-  <input class="submit" type="submit" name="submit" value="Ask">
-  </form>
-
+{% block content %}
+<div class="container">
+    <h2 class="col-md-12 head">Ask Question</h2><br><br>
+    <form action="" method="post" class="qform" role="form">
+        {% csrf_token %}
+        {% include 'forum/form_template.html' %}
+        <br><br>
+        <input class="btn btn-default" type="submit" name="submit" value="Ask">
+    </form>
+</div>
 {%endblock %}
 
 
