--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -12,5 +12,10 @@
         {{ article.content }}
     </p>
 </div>
+
+<script>
+  $('li.active').removeClass('active');
+  $('#article-tab').addClass('active');
+</script>
 {% endblock %}
 
