--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -43,4 +43,9 @@
     {% endif %}
 </div>
 
+<script>
+  $('li.active').removeClass('active');
+  $('#article-tab').addClass('active');
+</script>
+
 {% endblock %}
