--- a/forum/templates/forum/detail.html
+++ b/forum/templates/forum/detail.html
@@ -37,4 +37,9 @@
     <div class="col-md-2"></div>
   </div>
 
+<script>
+  $('li.active').removeClass('active');
+  $('#forum-tab').addClass('active');
+</script>
+
 {% endblock %}
