--- a/logapp/templates/logapp/home.html
+++ b/logapp/templates/logapp/home.html
@@ -88,6 +88,11 @@
     </div>
   </div>
 
+<script>
+  $('li.active').removeClass('active');
+  $('#home-tab').addClass('active');
+</script>
+
 
 
 {% endblock %}
