--- a/practice/templates/practice/index.html
+++ b/practice/templates/practice/index.html
@@ -36,5 +36,9 @@
   </div>
   {% endif %}
 </div>
+<script>
+  $('li.active').removeClass('active');
+  $('#practice-tab').addClass('active');
+</script>
 
 {% endblock %}
