--- a/articles/templates/articles/article_form.html
+++ b/articles/templates/articles/article_form.html
@@ -29,6 +29,11 @@
         </div>
     </div>
 </div>
+
+<script>
+  $('li.active').removeClass('active');
+  $('#article-tab').addClass('active');
+</script>
 {% endblock %}
 
 
