--- a/forum/templates/forum/answer_form.html
+++ b/forum/templates/forum/answer_form.html
@@ -15,6 +15,11 @@
         <input class="btn btn-default" type="submit" name="submit" value="Submit">
     </form>
 </div>
+
+<script>
+  $('li.active').removeClass('active');
+  $('#forum-tab').addClass('active');
+</script>
 {% endblock %}
 
 
