Now cards are added!

--- a/logapp/templates/logapp/login.html
+++ b/logapp/templates/logapp/login.html
@@ -4,10 +4,10 @@
 {%load static %}
 {% block content %}
 <!--Row 1: Image + login panel -->
-<div class="row">
+<section class="splitSection" >
     <div class="col-md-8" id="big-logo-bg">
         <br>
-        <img src="{% static 'images/logo.svg' %}" width="40%">
+        <img src="{% static 'images/logo.svg' %}" width="40%" class="logo-image">
     </div>
 
     <div class="container col-md-4" id="we">
@@ -43,45 +43,47 @@
         </div>
         {% endif %}
     </div>
-</div>
-<br><br>
-<!-- Row for 3 sections -->
-<div class="row">
+</section>
 
+
+<!-- Row for 3 sections -->
+<div class="row" style="background-color: #f7f7f7">
+    <br><br>
     <div class="container col-md-4 ">
         <a href="{% url 'practice:index' %}" class="clickableCard">
-            <div class="panel panel-default sections" class="card-div">
+            <div class="panel sections card-div card">
                 <img src="{% static 'images/practice_lamp.svg'%}" width="30%">
                 <h3>Practice</h3>
-                <p>Try out exciting problems and make yourself perfect!</p>
+                <p class="description">Try out exciting problems and make yourself perfect!</p>
             </div>
         </a>
     </div>
 
     <div class="container col-md-4 ">
         <a href="{% url 'articles:index' %}" class="clickableCard">
-            <div class="panel panel-default sections">
+            <div class="panel sections card-div card">
                 <img src="{% static 'images/learn_bookshelf.svg'%}" width="30%">
                 <h3>Learn</h3>
-                <p>Access articles written by experienced professionals.</p>
+                <p class="description">Access articles written by experienced professionals.</p>
             </div>
         </a>
     </div>
 
     <div class="container col-md-4 ">
         <a href="{% url 'forum:index' %}" class="clickableCard">
-            <div class="panel panel-default sections">
+            <div class="panel sections card-div card">
                 <img src="{% static 'images/ask_chat.svg'%}" width="30%">
                 <h3>Ask &amp; Answer</h3>
-                <p>Visit the community forums and share knowledge.</p>
+                <p class="description">Visit the community forums and share knowledge.</p>
             </div>
         </a>
     </div>
 </div>
+
 <div class="row">
     <div class="panel panel-default" id="footer-div">
         <address style="float:left;">
-            <h2><span class="glyphicon glyphicon-leaf" style="color: #14c07b;"></span> Codersite</h2>
+            <h4><span class="glyphicon glyphicon-leaf" style="color: #14c07b;"></span> Codersite</h4>
             <small>
                 Web Technologies Project<br>
                 Delhi Technological University<br>
