--- a/static/css/mine.css
+++ b/static/css/mine.css
@@ -14,7 +14,7 @@ body{
 }
 
 #big-logo-bg,#we{
-  background-color: #829192;
+  /*background-color: #829192;*/
 }
 img{
   display: block;
@@ -62,12 +62,33 @@ a:hover{
     text-decoration:none;
 }
 
-.clickableCard:hover{
-    text-decoration:none;
-}
 clickableCard:link{
     color: black;
 }
-card-div{
+.card-div{
     color:black;
+}
+
+.card{
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  transition: 0.2s;  
+}
+
+.card:hover{
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+
+.description{
+  color:#606060;
+}
+
+.splitSection{
+  display:flex;
+  /*background-color: #ff0000;*/
+  background-image:url('../images/glass_board.png');
+}
+
+/* Tried setting it on logo but square is formed, so didn't use it */
+.logo-image{
+  /*box-shadow: 0px 8px 16px  rgba(0,0,0,0.8);*/
 }
