Inserted sensible data into the database

--- a/logapp/templates/logapp/login.html
+++ b/logapp/templates/logapp/login.html
@@ -13,7 +13,7 @@
     <div class="container col-md-4" id="we">
         <br><br>
         <!-- Login panel -->
-        <div class="panel panel-success">
+        <div class="panel panel-success card">
 
             <div class="panel-heading">
                 <strong>Log in</strong>
@@ -81,13 +81,14 @@
 </div>
 
 <div class="row">
-    <div class="panel panel-default" id="footer-div">
+    <!-- <div class="panel panel-default" id="footer-div"> -->
+    <div class="container-fluid">
         <address style="float:left;">
             <h4><span class="glyphicon glyphicon-leaf" style="color: #14c07b;"></span> Codersite</h4>
             <small>
                 Web Technologies Project<br>
                 Delhi Technological University<br>
-                Copyright (c) DTU
+                Copyright (c) ShivayaDevelopers
             </small>
         </address>
         <!--<div class="container" style="float:right;">
